tests/integration/targets/playbooks/provision_playbook/enterprise-example.com/platform/elastic-system/default/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tavros
  namespace: elastic-system
  annotations:
    cert-manager.io/cluster-issuer: tavros
    kubernetes.io/ingress.class: prod
    konghq.com/strip-path: "true"
    konghq.com/protocols: https
    konghq.com/https-redirect-status-code: "302"
spec:
  rules:
    - host: kibana.tavros.enterprise-example.com
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: tavros-kb-http
                port:
                  number: 5601
  tls:
    - hosts:
        - kibana.tavros.enterprise-example.com
      secretName: elastic-cloud-ingress-cert
